tests/codegen/fail/enum/derive_wrong_item.rs
#[derive(juniper::GraphQLEnum)]
struct Test {}

fn main() {}
