tests/codegen/fail/enum/derive_wrong_item.stderr
error: GraphQL enum can only be derived on enums
 --> fail/enum/derive_wrong_item.rs:2:1
  |
2 | struct Test {}
  | ^^^^^^^^^^^^^^
